--- a/client/src/components/ToggelButton/ToggleButton.css
+++ b/client/src/components/ToggelButton/ToggleButton.css
@@ -1,25 +1,8 @@
 .toggle_button {
-    /* display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    height: 24px;
-    width: 30px;
-    padding: 0;*/
     border: none;
     cursor: pointer;
     box-sizing: border-box; 
-    background: transparent;
-    margin: 0 1.5rem;
-    margin-top: 1rem;
-
-
-}
-
-.toggle_button:focus {
-    outline: none;
-}
-.toggle_button_line {
-    width: 25px;
-    height: 3px;
-    background-color: black;
+    color: black;
+    margin-top: 4%;
+    width: 2%;
 }
