--- a/client/src/components/ToggelButton/ToggleButton.css
+++ b/client/src/components/ToggelButton/ToggleButton.css
@@ -1,8 +1,14 @@
-.toggle_button {
-    border: none;
+.toggle_container {
     cursor: pointer;
     box-sizing: border-box; 
-    color: black;
+    margin-left: 5%;
     margin-top: 4%;
-    width: 2%;
+    margin-right: 5%;
+    width: 15%;
+}
+
+.toggle_button{
+    margin-top: 5%;
+    border: none;
+    background: transparent;
 }
