--- a/client/src/components/Toggle/Toggle.css
+++ b/client/src/components/Toggle/Toggle.css
@@ -1,10 +1,12 @@
 .toggle{
-  position: absolute;
-  height: 50%;
+  position: fixed;
+  /* display:inline-block; */
+  /* box-sizing: border-box; */
   background-color: #f1f1f1;
-  width: 200px;
+  width: 20%;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 200;
+  /* margin-top: 30%; */
+  /* margin-right:50%; */
   
 }
 .toggle ul{
@@ -21,8 +23,9 @@
 .toggle a{
     text-decoration: none;
     color: black;
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
-
-.show {display:block;}
+.show{
+    display: block;
+}
