--- a/client/src/components/footer/Footer.css
+++ b/client/src/components/footer/Footer.css
@@ -1,11 +1,37 @@
 footer{
     background:#000000;
     color: #ffffff;
+    padding-left: 2%;
+    font-size: 62.5%;
 }
 
-.footer-top img{
-    width: 30%;
+
+.footer-image{
+    display:grid;
+    /* flex-direction: column; */
+}
+.footer-image_NRC{
+    margin: 3% 0;
     
+    width: 35%;
+}
+
+.footer-image_MLS{
+    width: 22%;
+}
+.footer-name{
+    margin: 2.5% 0;
+}
+.footer-address{
+    margin: 2.5% 0;
+
+}
+.footer-phone{
+    margin: 2.5% 0;
+}
+
+.footer-copyright{
+    margin: 10% 0 3% 0;
 }
 
 .list{
@@ -24,8 +50,8 @@ footer{
     border: 1px solid black;
     /* width: 30%; */
     list-style: none;
-    padding-left: 10%;
-    margin: 2% 0;
+    margin-bottom: 3%;
+
 } 
 
 .list a{
