--- a/client/src/components/Toggle/Toggle.css
+++ b/client/src/components/Toggle/Toggle.css
@@ -1,8 +1,7 @@
 .toggle{
   position: absolute;
-  height: 50%;
-  background-color: #f1f1f1;
-  width: 200px;
+  background-color: gray;
+  width: 400px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 200;
   
@@ -25,4 +24,3 @@
 }
 
 
-.show {display:block;}
