--- a/client/src/components/footer/Footer.css
+++ b/client/src/components/footer/Footer.css
@@ -23,6 +23,7 @@ footer{
     margin: 3% 0;
     
     width: 35%;
+    
 }
 
 .footer-image_MLS{
@@ -56,7 +57,7 @@ footer{
 } */
 
 .list li{
-    border: 1px solid black;
+    /* border: 1px solid black; */
     /* width: 30%; */
     list-style: none;
     margin-bottom: 3%;
