--- a/client/src/components/footer/Footer.css
+++ b/client/src/components/footer/Footer.css
@@ -56,7 +56,7 @@ footer{
 } */
 
 .list li{
-    border: 1px solid black;
+    /* border: 1px solid black; */
     /* width: 30%; */
     list-style: none;
     margin-bottom: 3%;
