--- a/client/src/App.css
+++ b/client/src/App.css
@@ -17,9 +17,8 @@
 
 .title{
     justify-self: center;
-    padding-top: 2%;
+    /* padding-top: 2%; */
     grid-row: 2;
-   
 }
 
 .association{
@@ -27,6 +26,8 @@
     grid-row: 2;
     align-self: center;
     font-size: 1.2rem;
+    font-weight: bold;
+    letter-spacing: 2px;
 }
 
 .info{
@@ -40,6 +41,7 @@
     border-left:1px solid black;
     grid-row: 1 / 5;
     padding-left: 5%;
+
 }
 
 .buttons-container{
@@ -54,13 +56,13 @@
 }
 
 .button{
-    margin: 3%;
+    margin: 3% 0;
     background: #dc143c;
     width: 100%;
     border: 1px solid black;
     font-size: 1rem;
-
 }
+
 .button:hover{
     background: black;
 }
@@ -75,5 +77,6 @@
 
     .button{
         font-size: 1.25rem;
+        letter-spacing: 2px;
     }
 }
